--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="css\assets.css" rel="stylesheet">
     <!-- TODO add all the classes and ids -->
     <head>
-        <link href=".css\assets.css" rel="stylesheet">
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Nautique</title>
         
     </head>
     <body>
-        <div>
+        <div class="top">
             <!-- this is supposed to be the div with a coursel of images subject to change  -->
             <!-- alternitive idea is to have a nice image to go with the theme -->
             <nav>
                 <!-- TODO make this aligned right by all means -->
-                <ul>
-                    <li><a> Reserve a table</a></li>
-                    <li><a>Menu</a></li>
-                    <li><a>About Us</a></li>
-                    <li><a>Contact Us</a></li>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item"><a class="nav-link cta_txt"> Reserve a table</a></li>
+                    <li class="nav-item"><a class="nav-link">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link">Contact Us</a></li>
                 </ul>
             </nav>
-            <img alt="Nautique logo">
-            <button></button>
-            <!-- TODO make and insert logo  -->
+
+            <div class="">
+                <img src="images\logoAsset 1.png" alt="Nautique logo">
+                <button class="cta_button"><span>Come dine with us</span></button>
+                <!-- TODO make and insert logo  -->
+            </div>
             <div>
                 <!-- maybe put a featured on list here maybe not, we'll see -->
             </div>
         </div>
-        <div>
+        <div class="background-main">
             <!-- this is the main body  -->
             <div class="container"> 
                 <!-- this is a continer for the other parts the css is only there to make it easier  -->
