--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="css\assets.css" rel="stylesheet">
@@ -37,12 +38,12 @@
         </div>
         <div class="background-main">
             <!-- this is the main body  -->
-            <div class="container"> 
+            <div class="container" id="main"> 
                 <!-- this is a continer for the other parts the css is only there to make it easier  -->
                 <div class="row">
                     <!-- thsese are gonna be interchangeble -->
-                    <div class="box"></div>
-                    <div class="box"></div>
+                    <div class="box col-6" style="background-image: none;background-position: center; background-repeat: no-repeat; background-size: cover;"></div>
+                    <div class="box col-6"></div>
                 </div>
                 <div class="row">
                     <div class="box"></div>
@@ -87,4 +88,5 @@
             });
             }
     </script>
+    <script src="js\contentassemblers.js"></script>
 </html>
