gallerycontent function added

--- a/index.html
+++ b/index.html
@@ -39,22 +39,9 @@
         <div class="background-main">
             <!-- this is the main body  -->
             <div class="container" id="main"> 
-                <!-- this is a continer for the other parts the css is only there to make it easier  -->
-                <div class="row">
-                    <!-- thsese are gonna be interchangeble -->
-                    <div class="box col-6" style="background-image: none;background-position: center; background-repeat: no-repeat; background-size: cover;"></div>
-                    <div class="box col-6"></div>
-                </div>
-                <div class="row">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                </div>
-                <div class="row">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                </div>
-            </div>
-            <div class="container">
+                <!-- this all filled by code so idk -->
+                
+            <div class="container" id="gallery">
                 <!-- this is the gallery image list -->
                 <!-- this is supposed to contain a lot of images -->
                 <div class="row">
