a whole bunch of things wer added here
this involves the menu site but  and some extra css but oh god

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
             <!-- this is supposed to be the div with a coursel of images subject to change  -->
             <!-- alternitive idea is to have a nice image to go with the theme -->
             <nav>
-                <!-- TODO make this aligned right by all means -->
                 <ul class="nav justify-content-end">
-                    <li class="nav-item"><a class="nav-link cta_txt"> Reserve a table</a></li>
-                    <li class="nav-item"><a class="nav-link">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link txt cta_txt" href="reservations.html"> Reserve a table</a></li>
+                    <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="aboutus.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="contacts.html">Contact Us</a></li>
                 </ul>
             </nav>
 
             <div class="">
                 <img src="images\logoAsset 1.png" alt="Nautique logo">
-                <button class="cta_button"><span>Come dine with us</span></button>
+                <a href=""><button class="cta_button"><span>Come dine with us</span></button></a>
                 <!-- TODO make and insert logo  -->
             </div>
             <div>
@@ -40,14 +38,19 @@
             <!-- this is the main body  -->
             <div class="container" id="main"> 
                 <!-- this all filled by code so idk -->
+                <!-- this is an example but not what is gonna be there -->
+                <div class="row">
+                    <div class="box col-6">
+                        <h2 col-12>this is an example</h2>
+                        <p>lorem ipsum donor tonor ditor akjnaodaadjlnaljkdnadadadadda</p>
+                        <button class="cta_button"><span class="cta_button_txt">this is also a test</span></button>
+                    </div>
+                    <div class="box col-6 background-alt"></div>
+                </div>
+            </div>
                 
             <div class="container" id="gallery">
                 <!-- this is the gallery image list -->
-                <!-- this is supposed to contain a lot of images -->
-                <div class="row">
-                    <!-- TODO fill this with images -->
-                </div>
-                <div class="row"></div>
             </div>
             <div id="google-map"></div>
         </div>
