base for menu added again

--- a/menu.html
+++ b/menu.html
@@ -28,35 +28,21 @@
         </div>
 
         <!--TODO this is the menu part remember to make the code for it -->
-        <div class="container background-main" id="menu">
-            <!-- this just an example for coding purposes -->
-            <div class="row">
-                <div class="menu col">
+        <div class="container background-main nomargin" id="menu">
+            <!-- this is the test  layuout-->
+            <div class="row menu-block">
+                <div class="col-9 menu_item background-alt"></div>
+                <div class="col-3 menu_item background-alt2">
                     <div class="container">
-                        <div class="placeholder col-7 background-alt"></div>
-                        <div class="placholder background-alt2 col-4 container">
-                            
-                            <div class="row">
-                                <div>
-                                    <p class="txt txt-normal">lorem ipsum donor blah blah blah</p>
-                                </div>
-                                <div>
-                                    <p class="r-side-txt cta_txt large">name</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="container">
-                                    <div class="row">
-                                        <!-- this is the alergen button array so idk what to do with that  -->
-                                        <div class="col-4 background-main box"></div>
-                                        <div class="col-4 background-main box"></div>
-                                        <div class="col-4 background-main box"></div>
-                                    </div>
-                                    <div class="row">
-                                        <!-- this is the alergen button array so idk what to do with that  -->
-                                        <div class="col-4 background-main box"></div>
-                                        <div class="col-4 background-main box"></div>
-                                        <div class="col-4 background-main box"></div>
+                        <div class="row">
+                            <p class="txt col-6">lorem ipsum they said donor they said</p>
+                            <h2 class="txt r-side-txt cta_txt col-6">menu</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col container">
+                                <div class="row">
+                                    <div class="col-3 box background-main">
+                                        <!-- this is basically an alergen indicator -->
                                     </div>
                                 </div>
                             </div>
@@ -64,6 +50,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="background-alt2">
+            <!-- TODO make this work eventually -->
         </div>
     </body>
 </html>
