--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="css\assets.css" rel="stylesheet">
-    <!-- TODO add all the classes and ids -->
     <head>
         
         <meta charset="utf-8">
@@ -26,7 +25,7 @@
             </nav>
 
             <div class="">
-                <img src="images\logoAsset 1.png" alt="Nautique logo">
+                <img src="images\Nautique logo.png" alt="Nautique logo">
                 <a href=""><button class="cta_button"><span>Come dine with us</span></button></a>
                 <!-- TODO make and insert logo  -->
             </div>
