added new logo, and flexed osme divs

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
             <!-- alternitive idea is to have a nice image to go with the theme -->
             <nav>
                 <ul class="nav justify-content-end">
-                    <li class="nav-item"><a class="nav-link txt cta_txt" href="reservations.html"> Reserve a table</a></li>
+                    <li class="nav-item"><a class="nav-link txt cta_txt nav-txt" href="reservations.html"> Reserve a table</a></li>
                     <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="aboutus.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="contacts.html">Contact Us</a></li>
                 </ul>
             </nav>
 
-            <div class="">
-                <img src="images\Nautique logo.png" alt="Nautique logo">
-                <a href=""><button class="cta_button"><span>Come dine with us</span></button></a>
-                <!-- TODO make and insert logo  -->
+            <div class="container">
+                <div class="row justify-content-end">
+                    <img src="images\Nautique logo.svg" alt="Nautique logo" class="logoimage">
+                </div>
+                <div class="row justify-content-end">
+                    <a href="reservations.html"><button class="cta_button"><span>Come dine with us</span></button></a>
+                </div>
+                
             </div>
             <div>
                 <!-- maybe put a featured on list here maybe not, we'll see -->
