fixed the content assemblers

--- a/menu.html
+++ b/menu.html
@@ -21,44 +21,33 @@
                     <li class="nav-item"><a class="nav-link txt txt-normal nav-txt" href="contacts.html">Contact Us</a></li>
                 </ul>
             </nav>
-            <!-- TODO css this into working -->
-            <div class="txtbox left-align">
-                <h1 class="txt cta_txt huge"></h1>
-            </div>
-            <div class="">
-                <input type="text"?>
-                <input type="checkbox">
-                <!-- add more checkboxes as needed -->
+            <div class="container">
+                <div class="row justify-content-start">
+                    <h1 class="l-side-txt txt">Menu</h1> 
+                </div>
             </div>
         </div>
-
-        <!--TODO this is the menu part remember to make the code for it -->
-        <div class="container background-main nomargin" id="menu">
-            <!-- this is the test  layuout-->
-            <div class="row menu-block">
-                <div class="col-9 menu_item background-alt"></div>
-                <div class="col-3 menu_item background-alt2">
-                    <div class="container">
-                        <div class="row">
-                            <p class="txt col-6">lorem ipsum they said donor they said</p>
-                            <h2 class="txt r-side-txt cta_txt col-6">menu</h2>
-                        </div>
-                        <div class="row">
-                            <div class="col container">
-                                <div class="row">
-                                    <div class="col-3 box background-main">
-                                        <!-- this is basically an alergen indicator -->
-                                    </div>
-                                </div>
+        <div class="background-main">
+            <div class="container content nomargin " id="menu">
+                <div class="row menu-block">
+                    <div class="col-9 background-alt"></div>
+                    <div class="col-3 background-alt2">
+                        <div class="containter menu">
+                            <div class="row justify-content-end">
+                                <h2 class="cta_txt txt left-align menutitle">name</h2>
+                            </div>
+                            <div class="row justify-content-end">
+                                <p class="txt txt-normal menutxt right-align">this is justfiller for this </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
-        <div class="background-alt2">
-            <!-- TODO make this work eventually -->
-        </div>
+
     </body>
+    <script src="js/menuassemblers.js"></script>
 </html>
 
