--- a/reservations.html
+++ b/reservations.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- deal with the nav later -->
-        <label for="reservations">reservations</label>
+        <label for="reservations" class="txt cta_txt">No. of seats</label>
         <div id="reservations">
             <select class="form-check">
                 <option value="1">1</option>
