retconning the issues

--- a/reservations.html
+++ b/reservations.html
@@ -8,21 +8,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Nautique</title>
+        <link rel="shortcut icon" type="image/jpg" href="images\anchor favi.png"/>
         
     </head>
     <body>
-        <!-- deal with the nav later -->
-        <label for="reservations" class="txt cta_txt">No. of seats</label>
-        <div id="reservations">
-            <select class="form-check">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-            </select>
-            <input type="datetime" class="form-control"/>
-            <name
-        </div> 
+        <div class="background-main container">
+            <div class="row">
+                <!-- this may be a nav but that's not the point -->
+            </div>
+            <div class="row justify-content-start">
+                <h1 class="huge txt cta_txt">reservations</h1>
+            </div>
+            <div class="row justify justify-content-start">
+                <label for="seats">No. of seats</label>
+                <input type="number" class="form-control"/>
+        </div>
     </body>
 
 </html>
