--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Nautique</title>
+        <link rel="shortcut icon" type="image/jpg" href="images\anchor favi.png"/>
         
     </head>
 </html>
