--- a/menu.html
+++ b/menu.html
@@ -4,11 +4,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="css\assets.css" rel="stylesheet">
     <link href="css\menu.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="images\anchor favi.png"/>
     <head>
         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Nautique</title>
+        <title>vanarts STUDENT MOCK PROJECT SITE</title>
         
     </head>
     <body>
