--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     </body>
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg
+        src="https://maps.googleapis.com/maps/api/js?key= [key was removed for reasons]
         &callback=initMap">
     </script>
     <script type="text/javascript">
